- simplified range request handling - correct handling of HTTP 416 responses - moved unit test to apache httpclient (old version 3.1 due to jackrabbit's dependency)